--- a/styles/globals.css
+++ b/styles/globals.css
@@ -22,7 +22,18 @@ main {
   margin: 2rem auto;
   max-width: 300px;
 }
+.button-container {
+  width: 100%;
+  margin: 2rem auto;
+  max-width: 300px;
+  display: flex;
+  flex-wrap: wrap;
 
+  justify-content: space-between;
+}
+.btns {
+  padding: 1% 15%;
+}
 input {
   display: block;
   width: 100%;
